Resolves: tdf#100460 queryContentCells doesn't count annotations...

since

commit c06dbbe7594c2a0b5a5b19f8e183d9c421e6e094
Author: Markus Mohrhard <markus.mohrhard@googlemail.com>
Date:   Thu Feb 23 23:36:49 2012 +0100

    remove mpNote from ScBaseCell

(cherry picked from commit 83f977c7f40d1a5fb975b8ce7c9958c992dba3f1)

Related: tdf#100460 GetNotesInRange doesn't count last cell in range

e.g. open document from tdf#100460 and select select A20:A21 and right click
and there is a hide comment entry. Shrink the selection to just A20 (which has
the comment in it) and the right click menu has no hide comment entry in it.

std::for_each(it, itEnd

means it < itEnd but here we want the rows indicated by

nStartRow <= nEndRow

so we need to increment itEnd by one to get the right range

(cherry picked from commit 84dc0157df9cb173ec74da2bd27507329efc3816)

Change-Id: I281a207e26aec8886b1f46b9279e1135b61586da
48e8c0748f520671e09f04b16961bf9729960317
Reviewed-on: https://gerrit.libreoffice.org/26614
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>

(cherry picked from commit 28e3843433c3dfa04aae70c3c0516911ee80bf69)